# Applied-Project

./: .gitignore  README.md  Report.tex
Report/: Report.tex
backend/: main.py  pyproject.toml  state.py
backend/ai/: chat.py  tools.py
backend/controls/: Robot_Motion_Tools copy.py  __init__.py  robot_control.py  robot_control_dobot.py  robot_control_template.py
backend/data_collection/: __init__.py  collect_data.py  convert_to_lerobot.py
backend/perception/: depth.py  init.py  stream.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CameraStream.tsx  DepthResult.tsx
